--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^4.0.2",
     "eslint-plugin-react-hooks": "^2.3.0",
     "prettier": "1.19.1",
     "react-slick": "^0.25.2"
